<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/TimeTracker">


    <!-- Radio Buttons -->

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:id="@+id/radioButton1"
            android:checked="false"
            android:paddingRight="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:layout_toRightOf="@+id/radioButton2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocidad"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:layout_gravity="center_vertical"
            android:paddingRight="20dp"
            android:layout_toRightOf="@+id/radioButton1" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:id="@+id/button"
            android:layout_above="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="109dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="100dp"
        android:id="@+id/layoutInputA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorb"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp" />

        <EditText
            android:layout_width="@dimen/dimen150"
            android:layout_height="wrap_content"
            android:id="@+id/inputvalorA"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="56dp"
            android:layout_marginEnd="56dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/layoutInputA"
        android:id="@+id/layoutInputB">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valora"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="@dimen/dimen150"
            android:layout_height="wrap_content"
            android:id="@+id/inputvalorB"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_gravity="center_horizontal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:id="@+id/labelResultado"
            android:layout_alignParentBottom="true"/>

        <EditText
            android:layout_width="@dimen/dimen150"
            android:layout_height="wrap_content"
            android:id="@+id/inputResultado"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/radioGroup"
            android:layout_toStartOf="@+id/radioGroup" />
    </RelativeLayout>

</RelativeLayout>
